# printer-proxy

./: .gitignore  ADMIN.md  Cargo.toml  DEPLOYMENT.md  HEALTH_CHECK.md  LOGGING.md  PERFORMANCE.md  PRINTERS_API.md  build-docker.sh  deploy-raspberry-pi.sh  deploy.sh  generate-token.sh  install.sh  printer-proxy.service  printers.yaml  quick-deploy.sh  setup-ssl.sh  ssl.sh  test_health.sh  uninstall.sh
logs/: printer-proxy.log.2025-09-06
src/: admin.rs  backend.rs  config.rs  errors.rs  escpos.rs  handlers.rs  health.rs  main.rs  pool.rs  printers.rs
