[package]
name = "printer-proxy"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2", "macros"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }
http = "1.1"
base64 = "0.22"
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dashmap = "6.1"
once_cell = "1.19"
